# blockchain-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
figures/: transaction_network.html
reports/: report.md
src/: ai_agent.py  analyzer.py  anomaly_detection.py  clustering.py  config.py  data_loader.py  network_analysis.py  utils.py
tests/: test_ai_agent.py  test_anomaly_detection.py  test_clustering.py  test_data_loader.py  test_network_analysis.py
